--- a/Resources/Prototypes/Imperial/Objects/Weapons/Battery/MiniCrossbow/projectiles.yml
+++ b/Resources/Prototypes/Imperial/Objects/Weapons/Battery/MiniCrossbow/projectiles.yml
@@ -12,7 +12,7 @@
   - type: Sprite
     noRot: false
     sprite: Imperial/Objects/Weapons/Battery/MiniCrossbow.rsi
-    color: "#FFFFFF"
+    color: "#F1F1F1"
     layers:
     - state: cbbolt
       shader: unshaded
@@ -30,10 +30,30 @@
   - type: StaminaDamageOnCollide
     damage: 45
   - type: Projectile
+    impactEffect: BulletImpactEffectGreenDisabler
     damage:
       types:
         Poison: 10
     forceSound: true
   - type: StunOnCollide
-    stunAmount: 1
-    knockdownAmount: 1
+    stunAmount: 2
+    knockdownAmount: 2
+
+- type: entity
+  id: BulletImpactEffectGreenDisabler
+  noSpawn: true
+  components:
+  - type: TimedDespawn
+    lifetime: 0.2
+  - type: Sprite
+    drawdepth: Effects
+    layers:
+    - shader: unshaded
+      map: ["enum.EffectLayers.Unshaded"]
+      sprite: Objects/Weapons/Guns/Projectiles/projectiles_tg.rsi
+      state: impact_laser_greyscale
+      color: green
+  - type: EffectVisuals
+  - type: Tag
+    tags:
+    - HideContextMenu
