--- a/Resources/Prototypes/Imperial/DeadSector/clothing/backpacks.yml
+++ b/Resources/Prototypes/Imperial/DeadSector/clothing/backpacks.yml
@@ -274,6 +274,8 @@
     interfaces:
       enum.SharedGasTankUiKey.Key:
         type: GasTankBoundUserInterface
+      enum.StorageUiKey.Key:
+        type: StorageBoundUserInterface
   - type: GasTank
     outputPressure: 21.3
     air:
@@ -287,7 +289,7 @@
   - type: Storage
     maxItemSize: Huge
     grid:
-    - 0,0,3,3
+    - 0,0,2,2
   - type: ClothingSpeedModifier
     walkModifier: 1
     sprintModifier: 0.9
