--- a/Resources/Prototypes/Imperial/Other/TFG/Toughguys/plushie_spawner.yml
+++ b/Resources/Prototypes/Imperial/Other/TFG/Toughguys/plushie_spawner.yml
@@ -34,5 +34,6 @@
         - PlushieIAA
         - PlushieAdri
         - PlushieHlimmy
+        - PlushieTaylor
       chance: 0.75
       offset: 0.10
