Агосты получили анализатор здоровья

--- a/Resources/Prototypes/Roles/Jobs/Fun/misc_startinggear.yml
+++ b/Resources/Prototypes/Roles/Jobs/Fun/misc_startinggear.yml
@@ -162,6 +162,7 @@
     - trayScanner
     - AccessConfiguratorUniversal
     - Multitool
+    - HandheldHealthAnalyzerUnpowered # Imperial Space
 
 #Gladiator with spear
 - type: startingGear
