--- a/Resources/Prototypes/GameRules/meteorswarms.yml
+++ b/Resources/Prototypes/GameRules/meteorswarms.yml
@@ -59,8 +59,8 @@
   - type: BasicStationEventScheduler
     minimumTimeUntilFirstEvent: 600 # 10 min
     minMaxEventTiming:
-      min: 750 # 12.5 min
-      max: 930 # 17.5 min
+      min: 2250 # 37.5 min # Imperial Space Edited
+      max: 2450 # (40.8)41 min # Imperial Space Edited
     scheduledGameRules: !type:NestedSelector
       tableId: BasicMeteorSwarmEventsTable
 
@@ -72,8 +72,8 @@
   - type: BasicStationEventScheduler
     minimumTimeUntilFirstEvent: 600 # 10 min 
     minMaxEventTiming:
-      min: 750 # 12.5 min
-      max: 930 # 17.5 min
+      min: 1500 # 25 min # Imperial Space Edited
+      max: 1650 # 27.5 min # Imperial Space Edited
     scheduledGameRules: !type:NestedSelector
       tableId: MeteorSwarmMildTable
 
