--- a/Resources/Prototypes/Roles/Jobs/Engineering/atmospheric_technician.yml
+++ b/Resources/Prototypes/Roles/Jobs/Engineering/atmospheric_technician.yml
@@ -15,6 +15,9 @@
   - Engineering
   - External
   - Atmospherics
+  special: #Imperial add
+  - !type:AddImplantSpecial #Imperial add
+    implants: [ MindShieldImplant ] #Imperial add
 
 - type: startingGear
   id: AtmosphericTechnicianGear
