Отключение лодаутов ИИ

--- a/Resources/Prototypes/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/Loadouts/role_loadouts.yml
@@ -26,9 +26,9 @@
   - GroupSpeciesBreathTool
 
 # Silicons
-- type: roleLoadout
-  id: JobStationAi
-  nameDataset: NamesAI
+# - type: roleLoadout // Imperial Space отключение лодаутов ИИ
+#   id: JobStationAi
+#   nameDataset: NamesAI
 
 # Civilian
 - type: roleLoadout
