--- a/Resources/Prototypes/GameRules/events.yml
+++ b/Resources/Prototypes/GameRules/events.yml
@@ -6,7 +6,7 @@
     - id: BluespaceArtifact
     - id: BluespaceLocker
     - id: BreakerFlip
-    - id: BureaucraticError
+    # - id: BureaucraticError Imperial Bureaucratic Error Fix
     - id: ClericalError
     - id: CockroachMigration
     - id: GasLeak
@@ -118,18 +118,18 @@
     minimumPlayers: 15
   - type: BreakerFlipRule
 
-# - type: entity // Imperial Space Удаление ивента бюрократической ошибки
-#   id: BureaucraticError
-#   parent: BaseGameRule
-#   components:
-#   - type: StationEvent
-#     startAnnouncement: station-event-bureaucratic-error-announcement
-#     minimumPlayers: 25
-#     weight: 3
-#     duration: 1
-#   - type: BureaucraticErrorRule
-#     ignoredJobs:
-#     - StationAi
+- type: entity
+  id: BureaucraticError
+  parent: BaseGameRule
+  components:
+  - type: StationEvent
+    startAnnouncement: station-event-bureaucratic-error-announcement
+    minimumPlayers: 25
+    weight: 3
+    duration: 1
+  - type: BureaucraticErrorRule
+    ignoredJobs:
+    - StationAi
 
 - type: entity
   id: ClericalError
