--- a/Resources/Prototypes/Empire/Entities/Tiles/FloorSpace.yml
+++ b/Resources/Prototypes/Empire/Entities/Tiles/FloorSpace.yml
@@ -7,7 +7,7 @@
   deconstructTools: [ Prying ]
   footstepSounds:
     collection: FootstepFloor
-  itemDrop: FloorTileItemShuttleWhite
+  itemDrop: FloorTileItemDark
   heatCapacity: 10000
 
 - type: tile
@@ -19,7 +19,7 @@
   deconstructTools: [ Prying ]
   footstepSounds:
     collection: FootstepFloor
-  itemDrop: FloorTileItemShuttleWhite
+  itemDrop: FloorTileItemDark
   heatCapacity: 10000
 
 - type: tile
@@ -31,7 +31,7 @@
   deconstructTools: [ Prying ]
   footstepSounds:
     collection: FootstepFloor
-  itemDrop: FloorTileItemShuttleWhite
+  itemDrop: FloorTileItemDark
   heatCapacity: 10000
 
 - type: tile
@@ -43,5 +43,5 @@
   deconstructTools: [ Prying ]
   footstepSounds:
     collection: FootstepFloor
-  itemDrop: FloorTileItemShuttleWhite
+  itemDrop: FloorTileItemDark
   heatCapacity: 10000
