--- a/Resources/Prototypes/Imperial/Clothing/Helmets/bulat.yml
+++ b/Resources/Prototypes/Imperial/Clothing/Helmets/bulat.yml
@@ -30,6 +30,9 @@
     containers:
       key_slots:
       - EncryptionKeyCommon
+  - type: BreathMask
+  - type: IngestionBlocker
+  - type: IdentityBlocker
   - type: Headset
     requiredSlot: HEAD
   - type: EncryptionKeyHolder
