--- a/Resources/Prototypes/Imperial/Clothing/Helmets/wood_grouse_1с.yml
+++ b/Resources/Prototypes/Imperial/Clothing/Helmets/wood_grouse_1с.yml
@@ -13,6 +13,7 @@
   - type: Item
     heldPrefix: off
     size: Normal
+  - type: IdentityBlocker
   - type: Armor
     modifiers:
       coefficients:
