--- a/Resources/Prototypes/Imperial/StationsContent/OldStation/EmptyHeadset/EmptyHeadset.yml
+++ b/Resources/Prototypes/Imperial/StationsContent/OldStation/EmptyHeadset/EmptyHeadset.yml
@@ -1,9 +1,9 @@
 - type: entity
   abstract: true
   parent: Clothing
-  id: ClothingArcaneEmptyHeadset
+  id: ClothingOldStationEmptyHeadset
   name: headset
-  suffix: Arcane
+  suffix: OldStation
   description: An updated, modular intercom that fits over the head. Takes encryption keys.
   components:
   - type: ContainerContainer
@@ -30,7 +30,7 @@
 
 
 - type: entity
-  parent: ClothingArcaneEmptyHeadset
+  parent: ClothingOldStationEmptyHeadset
   id: ClothingHeadsetGanza
   name: headset ganza
   components:
