--- a/Resources/Prototypes/Imperial/StationsContent/OldStation/PlushTwo/OliaPl.yml
+++ b/Resources/Prototypes/Imperial/StationsContent/OldStation/PlushTwo/OliaPl.yml
@@ -2,11 +2,11 @@
   parent: BasePlushieCharacter
   id: PlushieOlia
   name: Olia Blake
-  suffix: COMMUNITY,TOY,Arcane
+  suffix: COMMUNITY,TOY,OldStation
   description: The nicest librarian there could be. She can show her written books and support in difficult times!
   components:
   - type: Item
     size: Small
   - type: Sprite
-    sprite: Imperial/StationsContent/ArcaneStation/PlushTwo
+    sprite: Imperial/StationsContent/OldStationStation/PlushTwo
     state: OliaPl
