--- a/Resources/Prototypes/Imperial/StationsContent/OldStation/RolePrototypes/RolePrototypes.yml
+++ b/Resources/Prototypes/Imperial/StationsContent/OldStation/RolePrototypes/RolePrototypes.yml
@@ -1,9 +1,9 @@
 - type: entity
   noSpawn: false
   parent: MobHuman
-  id: ArcaneTraderPreset
+  id: OldStationTraderPreset
   name: Trader
-  suffix: Arcane
+  suffix: OldStation
   components:
     - type: RandomMetadata
       nameSegments:
@@ -14,7 +14,7 @@
       sprite: Markers/jobs.rsi
       state: ertleadereva
     - type: Loadout
-      prototypes: [ ArcaneTraderGear ]
+      prototypes: [ OldStationTraderGear ]
     - type: RandomHumanoidAppearance
       randomizeName: false
     # - type: CrewSkills
@@ -32,9 +32,9 @@
 - type: entity
   noSpawn: false
   parent: MobHuman
-  id: ArcaneSmugglerPreset
+  id: OldStationSmugglerPreset
   name: Smuggler
-  suffix: Arcane
+  suffix: OldStation
   components:
     - type: RandomMetadata
       nameSegments:
@@ -48,7 +48,7 @@
       sprite: Markers/jobs.rsi
       state: ertleadereva
     - type: Loadout
-      prototypes: [ ArcaneSmugglerGear ]
+      prototypes: [ OldStationSmugglerGear ]
     - type: RandomHumanoidAppearance
       randomizeName: false
     # - type: CrewSkills
@@ -64,9 +64,9 @@
 - type: entity
   noSpawn: false
   parent: MobHuman
-  id: ArcaneMercPreset
+  id: OldStationMercPreset
   name: Merc
-  suffix: Arcane
+  suffix: OldStation
   components:
     - type: RandomMetadata
       nameSegments:
@@ -77,7 +77,7 @@
       sprite: Markers/jobs.rsi
       state: ertleadereva
     - type: Loadout
-      prototypes: [ ArcaneMercGear ]
+      prototypes: [ OldStationMercGear ]
     - type: RandomHumanoidAppearance
       randomizeName: false
     # - type: CrewSkills
@@ -97,9 +97,9 @@
 - type: entity
   noSpawn: false
   parent: MobHuman
-  id: ArcaneHeadMercPreset
+  id: OldStationHeadMercPreset
   name: Head Merc
-  suffix: Arcane
+  suffix: OldStation
   components:
     - type: RandomMetadata
       nameSegments:
@@ -110,7 +110,7 @@
       sprite: Markers/jobs.rsi
       state: ertleadereva
     - type: Loadout
-      prototypes: [ ArcaneHeadMercGear ]
+      prototypes: [ OldStationHeadMercGear ]
     - type: RandomHumanoidAppearance
       randomizeName: false
     # - type: CrewSkills
@@ -130,9 +130,9 @@
 - type: entity
   noSpawn: false
   parent: MobHuman
-  id: ArcaneBomjPreset
+  id: OldStationBomjPreset
   name: Bum
-  suffix: Arcane
+  suffix: OldStation
   components:
     - type: RandomMetadata
       nameSegments:
@@ -143,7 +143,7 @@
       sprite: Markers/jobs.rsi
       state: ertleadereva
     - type: Loadout
-      prototypes: [ ArcaneBomjGear ]
+      prototypes: [ OldStationBomjGear ]
     - type: RandomHumanoidAppearance
       randomizeName: false
     # - type: CrewSkills
