--- a/Resources/Prototypes/Hydroponics/randomMutations.yml
+++ b/Resources/Prototypes/Hydroponics/randomMutations.yml
@@ -160,15 +160,15 @@
       persists: false
       effect: !type:PlantChangeStat
         targetValue: TurnIntoKudzu
-    # - name: ChangeScreaming // Заблокирована в связи с тем, что может вызывать дюпы Imperial Space
-    #   baseOdds: 0.036
-    #   persists: true # Imperial PlantsAnalyzer (false -> true)
-    #   effect: !type:PlantChangeStat
-    #     targetValue: CanScream
-    # - name: ChangeChemicals // Заблокирована в связи с тем, что может вызывать дюпы Imperial Space
-    #   baseOdds: 0.072
-    #   persists: true # Imperial PlantsAnalyzer (false -> true)
-    #   effect: !type:PlantMutateChemicals
+    - name: ChangeScreaming
+      baseOdds: 0.036
+      persists: true # Imperial PlantsAnalyzer (false -> true)
+      effect: !type:PlantChangeStat
+        targetValue: CanScream
+    - name: ChangeChemicals
+      baseOdds: 0.072
+      persists: true # Imperial PlantsAnalyzer (false -> true)
+      effect: !type:PlantMutateChemicals
     - name: ChangeExudeGasses
       baseOdds: 0.0145
       persists: true # Imperial PlantsAnalyzer (false -> true)
