Revert "Arcane replacing name"

--- a/Resources/Prototypes/Imperial/InterGalactic/mobs.yml
+++ b/Resources/Prototypes/Imperial/InterGalactic/mobs.yml
@@ -64,9 +64,9 @@
 
 - type: entity
   #noSpawn: false
-  parent: OldStationMercPreset
+  parent: ArcaneMercPreset
   name: Наёмник InterGalactic
-  id: OldStationMercInterGalacticPreset
+  id: ArcaneMercInterGalacticPreset
   suffix: InterGalactic
   components:
     - type: Loadout
