--- a/Resources/Prototypes/Imperial/StationsContent/ArcaneStation/Book/BestiaBook.yml
+++ b/Resources/Prototypes/Imperial/StationsContent/ArcaneStation/Book/BestiaBook.yml
@@ -2,11 +2,11 @@
   parent: BookBase
   id: BestiaBook
   name: The Eridani Beast
-  suffix: OldStation
+  suffix: Arcane
   description: A dusty book that can remind someone of the old days.
   components:
     - type: Sprite
-      sprite: Imperial/StationsContent/OldStationStation/Book.rsi
+      sprite: Imperial/StationsContent/ArcaneStation/Book.rsi
       layers:
         - state: BestiaBook
     - type: Paper
