--- a/Resources/Prototypes/Imperial/StationsContent/ArcaneStation/Plush/ViollaPl.yml
+++ b/Resources/Prototypes/Imperial/StationsContent/ArcaneStation/Plush/ViollaPl.yml
@@ -2,11 +2,11 @@
   parent: BasePlushieCharacter
   id: PlushieViolla
   name: Violla Blake
-  suffix: COMMUNITY,TOY,OldStation
+  suffix: COMMUNITY,TOY,Arcane
   description: The record holder for sleeping at the counter and not only. The best rescuer of Adriana's nerve cells.
   components:
   - type: Item
     size: Small
   - type: Sprite
-    sprite: Imperial/StationsContent/OldStationStation/Plush
+    sprite: Imperial/StationsContent/ArcaneStation/Plush
     state: ViollaPl
