--- a/Resources/Prototypes/Imperial/StationsContent/ArcaneStation/RolePrototypes/RolePrototypes.yml
+++ b/Resources/Prototypes/Imperial/StationsContent/ArcaneStation/RolePrototypes/RolePrototypes.yml
@@ -1,9 +1,9 @@
 - type: entity
   noSpawn: false
   parent: MobHuman
-  id: OldStationTraderPreset
+  id: ArcaneTraderPreset
   name: Trader
-  suffix: OldStation
+  suffix: Arcane
   components:
     - type: RandomMetadata
       nameSegments:
@@ -14,7 +14,7 @@
       sprite: Markers/jobs.rsi
       state: ertleadereva
     - type: Loadout
-      prototypes: [ OldStationTraderGear ]
+      prototypes: [ ArcaneTraderGear ]
     - type: RandomHumanoidAppearance
       randomizeName: false
     # - type: CrewSkills
@@ -32,9 +32,9 @@
 - type: entity
   noSpawn: false
   parent: MobHuman
-  id: OldStationSmugglerPreset
+  id: ArcaneSmugglerPreset
   name: Smuggler
-  suffix: OldStation
+  suffix: Arcane
   components:
     - type: RandomMetadata
       nameSegments:
@@ -48,7 +48,7 @@
       sprite: Markers/jobs.rsi
       state: ertleadereva
     - type: Loadout
-      prototypes: [ OldStationSmugglerGear ]
+      prototypes: [ ArcaneSmugglerGear ]
     - type: RandomHumanoidAppearance
       randomizeName: false
     # - type: CrewSkills
@@ -64,9 +64,9 @@
 - type: entity
   noSpawn: false
   parent: MobHuman
-  id: OldStationMercPreset
+  id: ArcaneMercPreset
   name: Merc
-  suffix: OldStation
+  suffix: Arcane
   components:
     - type: RandomMetadata
       nameSegments:
@@ -77,7 +77,7 @@
       sprite: Markers/jobs.rsi
       state: ertleadereva
     - type: Loadout
-      prototypes: [ OldStationMercGear ]
+      prototypes: [ ArcaneMercGear ]
     - type: RandomHumanoidAppearance
       randomizeName: false
     # - type: CrewSkills
@@ -97,9 +97,9 @@
 - type: entity
   noSpawn: false
   parent: MobHuman
-  id: OldStationHeadMercPreset
+  id: ArcaneHeadMercPreset
   name: Head Merc
-  suffix: OldStation
+  suffix: Arcane
   components:
     - type: RandomMetadata
       nameSegments:
@@ -110,7 +110,7 @@
       sprite: Markers/jobs.rsi
       state: ertleadereva
     - type: Loadout
-      prototypes: [ OldStationHeadMercGear ]
+      prototypes: [ ArcaneHeadMercGear ]
     - type: RandomHumanoidAppearance
       randomizeName: false
     # - type: CrewSkills
@@ -130,9 +130,9 @@
 - type: entity
   noSpawn: false
   parent: MobHuman
-  id: OldStationBomjPreset
+  id: ArcaneBomjPreset
   name: Bum
-  suffix: OldStation
+  suffix: Arcane
   components:
     - type: RandomMetadata
       nameSegments:
@@ -143,7 +143,7 @@
       sprite: Markers/jobs.rsi
       state: ertleadereva
     - type: Loadout
-      prototypes: [ OldStationBomjGear ]
+      prototypes: [ ArcaneBomjGear ]
     - type: RandomHumanoidAppearance
       randomizeName: false
     # - type: CrewSkills
