--- a/Resources/Prototypes/Datasets/Names/borg.yml
+++ b/Resources/Prototypes/Datasets/Names/borg.yml
@@ -2,40 +2,40 @@
 - type: dataset
   id: names_borg
   values:
-  - Bob
-  - Joe
-  - Beep
-  - Beep II
-  - Boombox
-  - Tour Guide-otron
-  - Taffy
-  - Boop
-  - Boop II
-  - Buzz
-  - Buzz II
-  - Toaster
-  - Head of Robots
-  - EVA 1
-  - Mr. Robist
-  - Junk
+  - Боб
+  - Джо
+  - Биип
+  - Биип II
+  - Бумбокс
+  - Экскурсоводо-трон
+  - Таффи
+  - Бууп
+  - Бууп II
+  - Базз
+  - Базз II
+  - Тостер
+  - Глава роботов
+  - ЕВА 1
+  - Мистер Робист
+  - Джанк
   - R2-PO
   - C-3-D2
-  - Robby
-  - Robobot
-  - Fixer
-  - Sonny
-  - Autobot
-  - Whitley
-  - Keller
-  - Xenos
-  - Echo
-  - Vector
+  - Робби
+  - Робобот
+  - Фиксатор
+  - Сонни
+  - Автобот
+  - Уитли
+  - Келлер
+  - Ксенос
+  - Эхо
+  - Вектор
   - B-0-RG
-  - Megabyte
-  - Butt-Bot
-  - Deceptiborg
-  - Le Borgue
-  - Beepers
-  - Cute-Bot
-  - Makeshifter
-  - Twin
+  - Мегабайт
+  - Батт-Бот
+  - Десептиборг
+  - Ле Борг
+  - Биперы
+  - Милый-Бот
+  - Самоделкин
+  - Близнец
