--- a/Resources/Prototypes/Objectives/ninja.yml
+++ b/Resources/Prototypes/Objectives/ninja.yml
@@ -30,7 +30,7 @@
 - type: entity
   parent: BaseNinjaObjective
   id: StealResearchObjective
-  description: Your gloves can be used to hack a research server and steal its precious data. If science has been slacking you'll have to get to work.
+  description: Ваши перчатки могут быть использованы для взлома сервера РнД и кражи его ценных данных. Если ученые бездельничают, вам придется самому взяться за их работу. # Imperial Translate
   components:
   - type: Objective
     icon:
@@ -45,7 +45,7 @@
 - type: entity
   parent: [BaseNinjaObjective, BaseCodeObjective]
   id: SpiderChargeObjective
-  description: This bomb can be detonated in a specific location. Note that the bomb will not work anywhere else!
+  description: Эту бомбу можно взорвать в определенном месте. Обратите внимание, что бомба не сработает в другом месте! # Imperial Translate
   components:
   - type: Objective
     icon:
@@ -56,8 +56,8 @@
 - type: entity
   parent: [BaseNinjaObjective, BaseSurviveObjective]
   id: NinjaSurviveObjective
-  name: Survive
-  description: You wouldn't be a very good ninja if you died, now would you?
+  name: Выжить # Imperial Translate
+  description: Если бы ты умер, ты бы не стал хорошим ниндзя, не так ли? # Imperial Translate
   components:
   - type: Objective
     icon:
@@ -67,8 +67,8 @@
 - type: entity
   parent: [BaseNinjaObjective, BaseCodeObjective]
   id: TerrorObjective
-  name: Call in a threat
-  description: Use your gloves on a communication console in order to bring another threat to the station.
+  name: Вызвать угрозу # Imperial Translate
+  description: Используйте перчатки на консоле коммуникации станции, чтобы вызвать еще одну угрозу на станции. # Imperial Translate
   components:
   - type: Objective
     icon:
@@ -78,10 +78,11 @@
 - type: entity
   parent: [BaseNinjaObjective, BaseCodeObjective]
   id: MassArrestObjective
-  name: Set everyone to wanted
-  description: Use your gloves to hack a criminal records console, setting the entire station to be wanted!
+  name: Объявите всех в розыск # Imperial Translate
+  description: Используйте перчатки, чтобы взломать консоль криминальных записей, объявив всю станцию ​​в розыск! # Imperial Translate
   components:
   - type: Objective
     icon:
       sprite: Objects/Weapons/Melee/stunbaton.rsi
       state: stunbaton_on
+      
