--- a/Resources/Prototypes/Objectives/traitor.yml
+++ b/Resources/Prototypes/Objectives/traitor.yml
@@ -38,8 +38,8 @@
 - type: entity
   parent: [BaseTraitorObjective, BaseLivingObjective]
   id: EscapeShuttleObjective
-  name: Escape to centcomm alive and unrestrained.
-  description: One of our undercover agents will debrief you when you arrive. Don't show up in cuffs.
+  name: Улететь на станцию ЦентКома живым и свободным. # Imperial Translate
+  description: Один из наших тайных агентов допросит вас по прибытии. Не появляйтесь в наручниках. # Imperial Translate
   components:
   - type: Objective
     difficulty: 1.3
@@ -51,8 +51,8 @@
 - type: entity
   parent: BaseTraitorObjective
   id: DieObjective
-  name: Die a glorious death
-  description: Die.
+  name: Умереть славной смертью # Imperial Translate
+  description: Умри! # Imperial Translate
   components:
   - type: Objective
     difficulty: 0.5
@@ -84,7 +84,7 @@
 - type: entity
   parent: [BaseTraitorObjective, BaseKillObjective]
   id: KillRandomPersonObjective
-  description: Do it however you like, just make sure they don't make it to centcomm.
+  description: Сделайте это как считаете нужным, главное чтобы он не попал на станцию ЦентКома # Imperial Translate
   components:
   - type: Objective
     difficulty: 1.75
@@ -96,7 +96,7 @@
 - type: entity
   parent: [BaseTraitorObjective, BaseKillObjective]
   id: KillRandomHeadObjective
-  description: We need this head gone and you probably know why. Good luck, agent.
+  description: Нам нужно убрать эту главу, и вы, вероятно, знаете почему. Удачи, агент. # Imperial Translate
   components:
   - type: Objective
     # technically its still possible for KillRandomPersonObjective to roll a head but this is guaranteed, so higher difficulty
@@ -116,7 +116,7 @@
 - type: entity
   parent: [BaseTraitorSocialObjective, BaseKeepAliveObjective]
   id: RandomTraitorAliveObjective
-  description: Identify yourself at your own risk. We just need them alive.
+  description: Раскрывайте себя на свой страх и риск. Он нам нужен живым. # Imperial Translate
   components:
   - type: Objective
     difficulty: 1.75
@@ -127,7 +127,7 @@
 - type: entity
   parent: [BaseTraitorSocialObjective, BaseHelpProgressObjective]
   id: RandomTraitorProgressObjective
-  description: Identify yourself at your own risk. We just need them to succeed.
+  description: Раскрывайте себя на свой страх и риск. Нам просто нужно, чтобы они выполнили свои цели. # Imperial Translate
   components:
   - type: Objective
     difficulty: 2.5
