Добавление в шкаф ГВ компактного дефибриллятора

--- a/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
@@ -221,6 +221,7 @@
     - id: MedkitFilled
     - id: RubberStampCMO
     - id: MedTekCartridge
+    - id: CompactDefibrillator # Imperial Space Компактный дефибриллятор в шкафчике ГВ
 
 # Hardsuit table, used for suit storage as well
 - type: entityTable
