--- a/Resources/Prototypes/Imperial/Roles/Jobs/Medical/Coroner/pda.yml
+++ b/Resources/Prototypes/Imperial/Roles/Jobs/Medical/Coroner/pda.yml
@@ -1,13 +1,25 @@
 - type: entity
-  parent: MedicalPDA
+  parent: BaseMedicalPDA
   id: CoronerPDA
   name: coroner PDA
   description:
   components:
-    - type: Sprite
-      sprite: Imperial/Roles/Medical/Coroner/pda.rsi
-    - type: Pda
-      id: CoronerIDCard
-      state: pda-coroner
-    - type: Icon
-      state: pda-coroner
+  - type: Sprite
+    sprite: Imperial/Roles/Medical/Coroner/pda.rsi
+    layers:
+      - map: [ "enum.PdaVisualLayers.Base" ]
+      - state: "light_overlay"
+        map: [ "enum.PdaVisualLayers.Flashlight" ]
+        shader: "unshaded"
+        visible: false
+      - state: "id_overlay"
+        map: [ "enum.PdaVisualLayers.IdLight" ]
+        shader: "unshaded"
+        visible: false
+  - type: Pda
+    id: CoronerIDCard
+    state: pda
+  - type: Icon
+    state: pda
+    sprite: Imperial/Roles/Medical/Coroner/pda.rsi
+
