--- a/Resources/Prototypes/Imperial/Other/Horror/Voices/HorrorVoices.yml
+++ b/Resources/Prototypes/Imperial/Other/Horror/Voices/HorrorVoices.yml
@@ -1,8 +1,7 @@
 - type: soundCollection
   id: RoseCryColl
   files:
-  - "/Audio/Imperial/Horror/Rose/RoseCry1.ogg"
-  - "/Audio/Weapons/Guns/Casings/RoseCry2.ogg"
+  - /Audio/Imperial/Horror/Rose/RoseCry1.ogg
 
 - type: emoteSounds
   id: RoseVoice
@@ -64,3 +63,23 @@
   id: HareVoice
   sound:
     path: /Audio/Imperial/Horror/Hare/Cryhare.ogg
+
+- type: emoteSounds
+  id: DevilVoice
+  sounds:
+    Scream:
+      path: /Audio/Imperial/Horror/Devil/Devilcry.ogg
+    Laugh:
+       path: /Audio/Imperial/Horror/Devil/Devilsmeh.ogg
+    DefaultDeathgasp:
+      path: /Audio/Imperial/Horror/Devil/Devildeath.ogg
+    Crying:
+       path: /Audio/Imperial/Horror/Devil/Devildamskyplath.ogg
+    Snore:
+       path: /Audio/Imperial/Horror/Devil/Devilhrap.ogg
+    Sigh:
+       path: /Audio/Imperial/Horror/Devil/Devileating.ogg
+- type: emoteSounds
+  id: DamnVoice
+  sound:
+    path: /Audio/Imperial/Horror/Damn/DamnCry.ogg
