--- a/Resources/Prototypes/Imperial/ElectroMouse/electromouse.yml
+++ b/Resources/Prototypes/Imperial/ElectroMouse/electromouse.yml
@@ -125,8 +125,8 @@
     color: Blue
   - type: UserInterface
     interfaces:
-    - key: enum.StoreUiKey.Key
-      type: StoreBoundUserInterface
+      enum.StoreUiKey.Key:
+        type: StoreBoundUserInterface
   - type: Store
     categories:
     - ElectromouseAbilities
