--- a/Resources/Prototypes/Imperial/Clothing/Departments/Juristic/starter_gear_IAA.yml
+++ b/Resources/Prototypes/Imperial/Clothing/Departments/Juristic/starter_gear_IAA.yml
@@ -47,10 +47,8 @@
   components:
     - type: StorageFill
       contents:
-        - id: Paper
-          amount: 3
-        - id: CyberPen
-        - id: RubberStampIAA
+        - id: BoxFolderPresentable
+        - id: LuxuryPen
 
 - type: entity
   parent: ClothingHeadset
