--- a/Resources/Prototypes/Imperial/Roles/Jobs/Security/SeniorOfficer/senior_officer.yml
+++ b/Resources/Prototypes/Imperial/Roles/Jobs/Security/SeniorOfficer/senior_officer.yml
@@ -17,6 +17,9 @@
   - Maintenance
   - Service
   - External
+  extendedAccess:
+  - Detective
+  - Armory
   special:
   - !type:AddImplantSpecial
     implants: [ MindShieldImplant ]
@@ -31,6 +34,8 @@
   id: SeniorOfficerGear
   equipment:
     eyes: ClothingEyesGlassesSecurity
+    head: ClothingHeadHatSeniorOfficerBeret
     id: SeniorOfficerPDA
     ears: ClothingHeadsetSecurity
+    neck: SecurityWhistle
     pocket1: WeaponPistolMk58Nonlethal
