--- a/Resources/Prototypes/Imperial/Objects/Misc/IAA/IAA.yml
+++ b/Resources/Prototypes/Imperial/Objects/Misc/IAA/IAA.yml
@@ -4,13 +4,23 @@
   name: internal affairs agent PDA
   description: Corporation and profit are best friends.
   components:
-    - type: Pda
-      id: IAAIDCard
-      state: pda-lawyer
-    - type: PdaBorderColor
-      borderColor: "#6f6192"
-    - type: Icon
-      state: pda-lawyer
+  - type: Pda
+    id: IAAIDCard
+    penSlot:
+      startingItem: LuxuryPen
+      priority: -1
+      whitelist:
+        tags:
+        - Write
+  - type: Appearance
+    appearanceDataInit:
+     enum.PdaVisuals.PdaType:
+       !type:String
+       pda-lawyer
+  - type: PdaBorderColor
+    borderColor: "#6f6192"
+  - type: Icon
+    state: pda-lawyer
 
 - type: entity
   parent: IDCardStandard
