--- a/Resources/Prototypes/Imperial/Other/ErtCall/Items.yml
+++ b/Resources/Prototypes/Imperial/Other/ErtCall/Items.yml
@@ -4,15 +4,17 @@
   name: dead squad PDA
   description: Oh no ...
   components:
-    - type: Pda
-      id: DeadSquadIDCard
-      state: pda-bartender
-    - type: PdaBorderColor
-      borderColor: "#242424"
-      accentHColor: "#447987"
-    - type: Icon
-      sprite: Objects/Devices/pda.rsi
-      state: pda-bartender
+  - type: Pda
+    id: DeadSquadIDCard
+  - type: Appearance
+    appearanceDataInit:
+     enum.PdaVisuals.PdaType:
+       !type:String
+       pda-bartender
+  - type: PdaBorderColor
+    borderColor: "#333333"
+  - type: Icon
+    state: pda-bartender
 
 - type: entity
   parent: CentcomIDCard
@@ -24,8 +26,8 @@
       layers:
         - state: blackcard
         - state: deadsquadID # we have the sprites but don't need individual ID entities for now.
-    - type: Item
-      # heldPrefix: gold
+    - type: PresetIdCard
+      job: DeathSquad
 
 - type: entity
   id: ThriveninChemistryBottle
