--- a/Resources/Prototypes/Imperial/Objects/Misc/IAA/IAA.yml
+++ b/Resources/Prototypes/Imperial/Objects/Misc/IAA/IAA.yml
@@ -8,7 +8,7 @@
       id: IAAIDCard
       state: pda-lawyer
       penSlot:
-        startingItem: PenCentcom
+        startingItem: LuxuryPen
         whitelist:
           tags:
           - Write
